[package]
name = 'hund'
version = '0.1.0'
authors = ['Alexander Korolev <kilork@yandex.ru>']
edition = '2018'
categories = []
description = '''
hund description.
'''
homepage = 'https://github.com/kilork/hund'
keywords = []
license = 'Unlicense OR MIT'
readme = 'README.md'
repository = 'https://github.com/kilork/hund'

[dependencies]
clap-verbosity-flag = '0.3'
data-encoding = "2.1"
dirs = "2.0"
exitfailure = '0.5'
failure = '0.1'
indicatif = '0.13'
log = '0.4'
reqwest = '0.9'
ring = '0.16'
structopt = '0.3'
toml = '0.5'

[dependencies.serde]
version = '1.0'
features = ['derive']
