[package]
name = 'hund'
version = '0.1.0'
authors = ['Alexander Korolev <alexander.korolev.germany@gmail.com>']
edition = '2018'
categories = []
description = '''
hund description.
'''
homepage = 'https://github.com/kilork/hund'
keywords = []
license = 'Unlicense OR MIT'
readme = 'README.md'
repository = 'https://github.com/kilork/hund'

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap-verbosity-flag = '0.3'
data-encoding = "2.1"
dirs = "3.0"
indicatif = '0.16'
log = '0.4'
reqwest = '0.11'
ring = '0.16'
structopt = '0.3'
toml = '0.5'

[dependencies.serde]
version = '1.0'
features = ['derive']
